# uk-weather-data-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
config/: asgi.py  docs.py  logs.py  middleware.py  storages.py  tracing.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py
db/: mixins.py
db/management/commands/: apply_migrations.py  create_text_search_config.py  import_metaoffice_data.py
db/migrations/: 0001_initial.py
db/models/: __init__.py  weather.py
requirements/: base.txt  development.txt  production.txt
scripts/: fetch_secrets.py  fetch_secrets.sh  start.sh
templates/: base.html  dashboard.html  data_explorer.html  home.html
templates/django_filters/rest_framework/: form.html
utils/: data_parser.py
weather_api/: admin.py  urls.py
weather_api/serializers/: weather.py
weather_api/views/: weather.py
web_app/: urls.py  views.py
